module_example/linux_vm_module/subnet.tf
resource "azurerm_subnet" "subnet" {

  for_each = var.subnets

  name                 = each.key

  resource_group_name  = azurerm_resource_group.my_rg.name
  virtual_network_name = azurerm_virtual_network.main.name

  address_prefixes     = each.value.cidr_block
}
